# CreateSoLib

./: README.en.md  README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/cn/yhsh/createsolib/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/java/: cn_yhsh_createsolib_MyJniNative.h
app/src/main/java/cn/yhsh/createsolib/: MainActivity.java  MyJniNative.java
app/src/main/jni/: cn_yhsh_createsolib_MyJniNative.c
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/test/java/cn/yhsh/createsolib/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
